Remove image padding to prevent scrollbars during initial load

--- a/public/stylesheets/image.css
+++ b/public/stylesheets/image.css
@@ -119,7 +119,6 @@
 #image #content {
   margin: 0 auto;
   max-width: 90%;
-  padding: 48px 0 0;
   text-align: center;
 }
 
